# Ember

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  ember.sh  log.sh  run.sh
Ember/: CMakeLists.txt
Ember/src/: Ember.h  Emberpch.h
Ember/src/Ember/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Ember/src/Ember/Core/: Application.cpp  Application.h  Assert.h  Base.h  Core.h  Defines.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Ember/src/Ember/Debug/: Instrumentor.h
Ember/src/Ember/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Ember/src/Ember/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Ember/src/Ember/Math/: Math.cpp  Math.h
Ember/src/Ember/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp  LinuxWindow.h  LinxWindow.cpp
Ember/src/Ember/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp
Ember/src/Ember/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Ember/src/Ember/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Ember/src/Ember/Server/: Listener.cpp  Listener.h  Server.cpp  Server.h
Ember/src/Ember/Utils/: PlatformUtils.h
Ember/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxPlatformUtils.cpp  LinuxWindow.cpp  LinuxWindow.h
Ember/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Foundry/: CMakeLists.txt  imgui.ini
Foundry/assets/scenes/: ExampleScene.ember  Physics.ember  PinkCube.ember  RedPlane.ember  Untitled.ember  attempt1.ember  test.ember
Foundry/assets/shaders/: Texture.glsl
Foundry/src/: EditorLayer.cpp  EditorLayer.h  Foundry.cpp
Foundry/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ScenehierarchyPanel.cpp  ScenehierarchyPanel.h
Foundry/src/Server/: Listener.cpp
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Main.cpp  SanboxApp.cpp  Sandbox2D.cpp  Sandbox2D.h  temp.txt
Scripts/: Setup.py  Utils.py  Vulkan.py  log.sh  run.sh  test.py
